# readme-ai

./: README.md  SECURITY.md  docker-compose.yml
.github/workflows/: backend-checks.yml  frontend-checks.yml  main.yml
readme-ai-frontend/: Dockerfile  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
readme-ai-frontend/src/: App.css  main.tsx  routeTree.gen.ts
readme-ai-frontend/src/components/: app-sidebar.tsx  delete-modal.tsx  markdown-preview.tsx  nav-main.tsx  pagination.tsx  progress-indicator.tsx  search-header.tsx
readme-ai-frontend/src/components/home/: error-display.tsx  github-link-form.tsx  markdown-result.tsx  step-header.tsx  template-selection.tsx  usage-limit-exceeded.tsx
readme-ai-frontend/src/components/landing-page/: cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  navbar.tsx  product-preview.tsx
readme-ai-frontend/src/components/readme-chat/: chat-interface.tsx  header.tsx  readme-chat-skeleton.tsx
readme-ai-frontend/src/components/sidebar/: user-profile.tsx
readme-ai-frontend/src/components/template-editor/: block-editor.tsx  markdown-blocks.tsx  preview.tsx  (+2 more)
readme-ai-frontend/src/hooks/: use-auth.ts  use-device.tsx  use-health.ts  use-mobile.tsx  use-toast.ts
readme-ai-frontend/src/pages/: create-template.tsx  create-templates.tsx  edit-template.tsx  home-page.tsx  landing-page.tsx  readme-chat.tsx  readmes.tsx
readme-ai-frontend/src/routes/: __root.tsx  _home.tsx  index.tsx
readme-ai-frontend/src/services/: health.ts  readme.ts  templates.ts  users.ts  utils.ts
readme_ai/: main.py  settings.py
readme_ai_backend/: .env  .gitignore  Dockerfile  entrypoint.sh  mypy.ini  pyproject.toml
readme_ai_backend/cache_service/: cache.py  decorators.py
readme_ai_backend/migrations/: env.py
readme_ai_backend/migrations/versions/: 012edad6cb79_change_relationship_table_names_to_file_.py  0642892cc0ab_full_text_search_for_templates.py  1bcbfdc08dac_add_users_table.py  56490874b868_add_fulltext_search_indexes.py  639127892aed_create_readme_tables.py  6eff50d2e995_add_path_to_file_content_table.py  81e45f9481e4_add_readme_models_and_chat_models.py  82af992d75c8_create_templates_table.py  9a18bfb2d396_merge_migration_heads.py  a324a4a963e8_add_repository_and_file_content_table.py  b1097d9e74dd_add_relationships_between_user_and_.py  b49aa35a941b_add_title_to_template_model.py  b5428bae75d5_add_vector_embedding_to_file_content.py  b7a404ea711a_add_featured_tag_to_boolean_so_in_the_.py  baa9640e39e4_make_user_id_mandatory.py  cc86e6320c64_change_relationship_table_names_to_file_.py  e8412bb28d15_add_readme_models.py
readme_ai_backend/readme_ai/: auth.py  database.py  logging_config.py  main.py  prompts.py  readme_agent.py  readme_agent1.py  repo_analyzer.py  settings.py  templates.py  usage_limit.py
readme_ai_backend/readme_ai/agents/: readme_agent.py  readme_improver.py  repo_analyzer.py
readme_ai_backend/readme_ai/cache_service/: cache.py  decorators.py
readme_ai_backend/readme_ai/handlers/: health.py  payments.py  readme.py  templates.py  usage.py  users.py
readme_ai_backend/readme_ai/models/: readme.py  repository.py  template.py  users.py
readme_ai_backend/readme_ai/models/requests/: payments.py  readme.py  templates.py  users.py
readme_ai_backend/readme_ai/models/responses/: readme.py  template.py  usage.py  users.py
readme_ai_backend/readme_ai/rate_limiter/: rate_limiter.py
readme_ai_backend/readme_ai/repositories/: chat_repository.py  readme_repository.py  repository_repo.py  template_repository.py  user_repository.py
readme_ai_backend/readme_ai/services/: cache.py  chat_service.py  file_analyzers.py  miniio_service.py  readme_service.py  repository_service.py  template_service.py  user_service.py
readme_ai_backend/readme_ai/utils/: title_parser.py  token_reset.py
(+32 files in other folders)
