[project]
name = "readme-ai"
version = "0.1.0"
description = ""
authors = [{ name = "botirk38", email = "btrghstk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi (>=0.115.8,<0.116.0)",
  "gitpython (>=3.1.44,<4.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "pydantic[email] (>=2.10.6,<3.0.0)",
  "pytest (>=8.3.4,<9.0.0)",
  "black (>=25.1.0,<26.0.0)",
  "ruff (>=0.9.4,<0.10.0)",
  "langchain (>=0.3.17,<0.4.0)",
  "langchain-groq (>=0.2.4,<0.3.0)",
  "langchain-community (>=0.3.16,<0.4.0)",
  "langgraph (>=0.2.69,<0.3.0)",
  "python-magic (>=0.4.27,<0.5.0)",
  "fastapi-limiter (>=0.1.6,<0.2.0)",
  "redis (>=5.2.1,<6.0.0)",
  "mypy (>=1.14.1,<2.0.0)",
  "pydantic-settings (>=2.7.1,<3.0.0)",
  "langchain-core (>=0.3.33,<0.4.0)",
  "pygithub (>=2.5.0,<3.0.0)",
  "uvicorn (>=0.34.0,<0.35.0)",
  "hypercorn (>=0.17.3,<0.18.0)",
  "sqlalchemy (>=2.0.38,<3.0.0)",
  "alembic (>=1.14.1,<2.0.0)",
  "minio (>=7.2.15,<8.0.0)",
  "pillow (>=11.1.0,<12.0.0)",
  "slowapi (>=0.1.9,<0.2.0)",
  "clerk-backend-api (>=1.7.2,<2.0.0)",
  "python-multipart (>=0.0.20,<0.0.21)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "async-lru (>=2.0.4,<3.0.0)",
  "sse-starlette (>=2.2.1,<3.0.0)",
  "apscheduler (>=3.11.0,<4.0.0)",
  "svix (>=1.58.1,<2.0.0)",
  "stripe (>=11.5.0,<12.0.0)",
  "types-stripe (>=3.5.2.20240106,<4.0.0.0)",
  "pgvector (>=0.4.0,<0.5.0)",
  "sqlalchemy-utils (>=0.41.2,<0.42.0)",
  "langchain-openai (>=0.3.12,<0.4.0)",
  "pathspec (>=0.12.1,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "readme_ai.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
mypy-extensions = "^1.0.0"
types-pyyaml = "^6.0.12.20241230"

